sumo/tests/traci/VariableRetrieval/Simulation/errors/UnsupportedVariable/testclient_out.traci
TraCITestClient output file. Date: Mon Apr 19 09:31:07 2010


-> Command sent: <SimulationStep>:
  TargetTime=5.00 PosFormat=1
.. Command acknowledged (1), [description: ]
.. Received Response <MoveNode>:
  nodeId=0 targetTime=5.00 2D-Position: x=1455.25 y=401.65

-> Command sent: <GetVariable>:
  domID=171 varID=255 objID=dummy
.. Answered with error to command (171), [description: Get Simulation Variable: unsupported variable specified]

-> Command sent: <SimulationStep>:
  TargetTime=6.00 PosFormat=1
.. Command acknowledged (1), [description: ]
.. Received Response <MoveNode>:
  nodeId=0 targetTime=6.00 2D-Position: x=1445.25 y=401.65

-> Command sent: <Close>:
.. Command acknowledged (127), [description: Goodbye]
